# go-pcre

./: .gitignore  BUILD.bazel  README.markdown  README.md  build_lib.sh  go.mod  pcre.go  pcre_test.go  platform_darwin.go  platform_darwin_arm64.go  platform_linux.go
.github/workflows/: build.yml
src/pkg/pcre/: pcre.go  pcre_test.go
